[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluentcron"
version = "0.1.1"
description = "A fluent interface for constructing crontab schedules"
authors = [{ name = "thelab", email = "thelabdev@thelab.co" }]
license = { text = "ISC" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/fluentcron"
Documentation = "https://gitlab.com/thelabnyc/fluentcron"
Repository = "https://gitlab.com/thelabnyc/fluentcron"

[dependency-groups]
dev = [
    "mypy (>=1.19.0)",
    "ruff (>=0.14.8)",
    "coverage (>=7.13.0)",
    "tox (>=4.32.0)",
]

[tool.hatch.build.targets.wheel]
packages = ["fluentcron"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.mypy]
python_version = "3.13"
plugins = []

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[tool.coverage.run]
branch = true
source_pkgs = ["fluentcron"]
omit = ["*/fluentcron/tests/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true", "uv build"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
